add navbar to home

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="style/styles.css" rel="stylesheet">
     <!-- endbuild -->
 
     <title>Hope Church Canberra</title>
@@ -23,8 +23,37 @@
 
 <body>
 
-<h1>HALOOO</h1>
-<p></p>
+    <nav class="navbar navbar-expand-sm bg-black fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#Navbar">
+                <img src="img/navbar-toggler-icon.png" width="40px" height="auto">
+            </button>
+            <div class="collapse navbar-collapse" id="Navbar">
+                <ul class="navbar-nav ms-auto">
+                        <li class="nav-item active"><a class="nav-link" href="index.html"> Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Lifegroups</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Core Values</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Visit Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    
+
+    <div class="container">WORKING in progresss</div>
+
+
+
+
+
+
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>  
+    <script src="js/scripts.js"></script>
+    
 </body>
 </html>
