--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </button>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav ms-auto">
-                        <li class="nav-item active"><a class="nav-link" href="index.html"> Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html"> Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Lifegroups</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Core Values</a></li>
@@ -46,7 +46,25 @@
     <div class="container">WORKING in progresss</div>
 
 
+    <footer class="footer bg-black">
+        <div class="container">
+            <div class="row">             
+                
+                <div class="text-center">
+                    <a class="btn btn-social-icon btn-instagram" href="http://www.instagram.com/hopecanberra/"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-google" href="https://www.youtube.com/channel/UCks1WYRhmtkBaGLfq7GUSrw"><i class="fa fa-youtube"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/HopeCanberra"><i class="fa fa-facebook"></i></a>
+                </div>
 
+           </div>
+
+           <div class="row justify-content-center hope-copyright">             
+                <div class="col-auto">
+                    <p>© Copyright 2022 Hope Church Canberra</p>
+                </div>
+           </div>
+        </div>
+    </footer>
 
 
 
