--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     
     <div class="container">
 
-        <div class="row row-content">
+        <div class="row row-content row-carousel">
             <div class="col">
 
                 <div id="mycarousel" class="carousel slide" data-bs-ride="carousel">
