add lifegroup page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="style/styles.css" rel="stylesheet">
+    <link href="style/index.css" rel="stylesheet">
     <!-- endbuild -->
 
     <title>Hope Church Canberra</title>
@@ -32,10 +33,10 @@
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html"> Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Lifegroups</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Core Values</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Visit Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="aboutus.html">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="lifegroup.html">Lifegroups</a></li>
+                        <li class="nav-item"><a class="nav-link" href="corevalues.html">Core Values</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -83,20 +84,22 @@
 
 
 
-        <div class="row row-content text-center">
+        <div class="row row-content text-center front-page-title">
             <div class="welcome-title">
                 Welcome to Hope Church Canberra
             </div>
             <div class="welcome-subtitle">
-                Welcome to Hope Church Canberra
+                We are a multicultural and vibrant community who love God and people. 
+                We seek to be a community of Christ centred believers that are inspired by God's Word and Presence!
+
             </div>
 
             <div class="date-time-title">
-                Sunday 10am
+                Time: 10am - 12.30pm Sundays
             </div>
 
             <div class="date-time-subtitle">
-                Location: Kambri
+                Location: Level 2, Cultural Centre Kambri Precinct <br> Australian National University
             </div> 
         </div>
 
@@ -105,6 +108,7 @@
 
         <div class="row row-content text-center">
             <div class="col">
+                <br>    
                 <div class="fb-post" data-href="https://www.facebook.com/HopeCanberra/posts/pfbid02QqzPVbVijdV74ikPhbugLHcVBcwoC6odHonJpq6aFmeD8EeYU5ZMatLS6QEUMSsSl" data-width="500" data-show-text="true">  
                 </div>
             </div>
@@ -113,6 +117,7 @@
                 <div class="row">
                     <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2F102599752478940%2Fvideos%2F792413872137999%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
                 </div>
+                <br>
                 <div class="row">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1628.5846270856634!2d149.12097928354902!3d-35.27691789753633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b164dee05699c33%3A0x35dc37aecc1fb698!2sCultural%20Centre%20Kambri%20(ANU%20Building%20153)!5e0!3m2!1sen!2sau!4v1653916942160!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
