--- a/pastor.html
+++ b/pastor.html
@@ -64,9 +64,24 @@
 
     
     <div class="container">
-        working in progress - make a form   
+        <div class="row row-content">
+
+            <img src="img/pastor.png" alt="ourleader-pastor-image">
+            <h1 class="pastor-title">
+                Our Leader
+            </h1>
+            <h2 class="pastor-subtitle">
+                Local Pastor: Patrick & Sarah Ching
+            </h2>
+            <p class="pastor-content">
+                Patrick & Sarah have been serving in Hope Churches for more than 15 years. They relocated to Canberra in 2012 and took over the 
+                leadership of the church at the beginning of 2014. Patrick is also working as an IT Professional and Sarah is a stay home mum 
+                taking care of their boys, David and Gabriel.
+             </p>
+        </div>
+
+
     </div>
-    
 
 
     <footer class="footer bg-black">
