--- a/vision.html
+++ b/vision.html
@@ -64,7 +64,20 @@
 
     
     <div class="container">
-        working in progress - make a form   
+        <div class="row row-content">
+
+            <img src="img/vision.jpg" alt="wearethechurch-image">
+            <h1 class="vision-subtitle">
+                Our vision
+            </h1>
+            <p class="vision-content">
+                Fulfilling the Great Commission by raising Christ-centred Disciples 
+                to plant Vibrant, Bible based Churches
+                in Canberra, Australia and all over the world
+             </p>
+        </div>
+
+
     </div>
     
 
