add contactus and api

--- a/corevalues.html
+++ b/corevalues.html
@@ -18,6 +18,7 @@
     <!-- endbuild -->
 
     <title>Hope Church Canberra</title>
+    <link rel="icon" type="image/png" href="img/logo.png"/>
 </head>
 
 
