--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <!-- endbuild -->
 
     <title>Hope Church Canberra</title>
+    <link rel="icon" type="image/png" href="img/logo.png"/>
 </head>
+
 
 
 <body>
