--- a/lifegroup.html
+++ b/lifegroup.html
@@ -19,6 +19,8 @@
     <!-- endbuild -->
 
     <title>Hope Church Canberra</title>
+    <link rel="icon" type="image/png" href="img/logo.png"/>
+    
 </head>
 
 
